@@ -1,12 +1,10 @@
 package slimeknights.mantle.loot.condition;
 
-import com.google.common.collect.ImmutableSet;
 import com.google.gson.JsonDeserializationContext;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonSerializationContext;
 import lombok.RequiredArgsConstructor;
 import net.minecraft.advancements.critereon.StatePropertiesPredicate;
-import net.minecraft.core.Registry;
 import net.minecraft.core.registries.Registries;
 import net.minecraft.tags.TagKey;
 import net.minecraft.world.level.block.Block;
@@ -46,7 +44,7 @@ public class BlockTagLootCondition implements LootItemCondition {
 
   @Override
   public Set<LootContextParam<?>> getReferencedContextParams() {
-    return ImmutableSet.of(LootContextParams.BLOCK_STATE);
+    return Set.of(LootContextParams.BLOCK_STATE);
   }
 
   @Override
