@@ -1,6 +1,5 @@
 package slimeknights.mantle.loot.function;
 
-import com.google.common.collect.ImmutableSet;
 import com.google.gson.JsonDeserializationContext;
 import com.google.gson.JsonObject;
 import net.minecraft.world.item.ItemStack;
@@ -13,8 +12,8 @@ import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
 import net.minecraft.world.level.storage.loot.predicates.LootItemCondition;
 import slimeknights.mantle.Mantle;
 import slimeknights.mantle.block.entity.IRetexturedBlockEntity;
-import slimeknights.mantle.item.RetexturedBlockItem;
 import slimeknights.mantle.loot.MantleLoot;
+import slimeknights.mantle.util.RetexturedHelper;
 
 import java.util.Set;
 
@@ -40,14 +39,14 @@ public class RetexturedLootFunction extends LootItemConditionalFunction {
 
   @Override
   public Set<LootContextParam<?>> getReferencedContextParams() {
-    return ImmutableSet.of(LootContextParams.BLOCK_ENTITY);
+    return Set.of(LootContextParams.BLOCK_ENTITY);
   }
 
   @Override
   protected ItemStack run(ItemStack stack, LootContext context) {
     BlockEntity te = context.getParamOrNull(LootContextParams.BLOCK_ENTITY);
     if (te instanceof IRetexturedBlockEntity retextured) {
-      RetexturedBlockItem.setTexture(stack, retextured.getTextureName());
+      RetexturedHelper.setTexture(stack, retextured.getTextureName());
     } else {
       String name = te == null ? "null" : te.getClass().getName();
       Mantle.logger.warn("Found wrong tile entity for loot function, expected IRetexturedTileEntity, found {}", name);
